fix horizontal scroll

--- a/custom_css/style.css
+++ b/custom_css/style.css
@@ -69,22 +69,6 @@ body {
   max-width: 72em;
 }
 
-.masthead {
-  margin-bottom: 2rem;
-}
-
-.masthead-brand {
-  margin-bottom: 0;
-}
-
-.nav-masthead .nav-link {
-  padding: 0.25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, 0.5);
-  background-color: transparent;
-  border-bottom: 0.25rem solid transparent;
-}
-
 .cover {
   padding: 0 1.5rem;
 }
